--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 
 	<properties>
 		<insight.version>1.7.0.CI-SNAPSHOT</insight.version>
-		<aspectj.version>1.6.10</aspectj.version>
-		<spring.framework.version>3.0.4.RELEASE</spring.framework.version>
+		<aspectj.version>1.6.12.M2</aspectj.version>
+		<spring.framework.version>3.0.5.RELEASE</spring.framework.version>
 		<junit.version>4.8.2</junit.version>
 		<mockito.version>1.8.5</mockito.version>
 	</properties>
@@ -109,8 +109,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.5</source>
+					<target>1.5</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -123,8 +123,8 @@
 							<goal>test-compile</goal>
 						</goals>
 						<configuration>
-							<source>1.6</source>
-							<target>1.6</target>
+							<source>1.5</source>
+							<target>1.5</target>
 							<outxml>true</outxml>
 						</configuration>
 					</execution>
@@ -142,24 +142,12 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-deploy-plugin</artifactId>
-				<configuration>
-					<skip>true</skip>
-				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
-
-	<distributionManagement>
-		<repository>
-			<id>spring-milestone</id>
-			<name>Spring Milestone Repository</name>
-			<url>s3://maven.springframework.org/milestone</url>
-		</repository>
-		<snapshotRepository>
-			<id>spring-snapshot</id>
-			<name>Spring Snapshot Repository</name>
-			<url>s3://maven.springframework.org/snapshot</url>
-		</snapshotRepository>
-	</distributionManagement>
 
 </project>
