--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,18 @@
 			<version>2.3</version>
 			<scope>provided</scope>
 		</dependency>
+        <dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${spring.framework.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${spring.framework.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
